# media-rs-backend

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  bash.exe.stackdump  books.py  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  get_movie_embeddings.py  main.py  manage.py  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
api/: app.py  db.sqlite3  serializers.py  views.py
api/api_project/: asgi.py  settings.py  urls.py  wsgi.py
api/recommender_api/: apps.py  models.py  serializers.py  urls.py  views.py  warmup.py
api/recommender_api/services/: collab_services.py  content_services.py  database_query.py  hybrid_services.py  tmdb.py
api/services/: collab_services.py  content_services.py  database_query.py  hybrid_services.py  tmdb.py
api/services/media_data/: book_query.py  get_media_data.py  open_library.py  tmdb.py
features/: similarity.py
media_rs/features/: faiss.py  similarity.py
media_rs/models/: base.py  collab.py  content.py  hybrid.py
media_rs/rs_types/: model.py  rating.py
media_rs/serving/recommender/models/: collab.py  content.py  hybrid.py
media_rs/training/: train_model.py
media_rs/training/features/: embeddings.py  faiss.py
media_rs/utils/: build_user_item_matrix.py  content_wrapper.py  convert_id.py  data_cache.py  item_index.py  load_data.py  open_library_extract.py  rate_limit.py  session.py  upload_data.py
media_rs/utils/books/: build_content_features.py  build_item_index.py  convert_to_csv.py  load_book_data.py  precompute_book_data.py
media_rs/utils/movies/: build_content_features.py  build_item_index.py  build_user_item_matrix.py  load_movie_data.py  movie_data_cache.py  precompute_movie_data.py  upload_movie_data.py
models/: collab.py  content.py  hybrid.py
src/: recommender.py
src/features/: similarity.py  tfidf.py
src/models/: base.py  collab.py  content.py  hybrid.py  item_collab.py  user_collab.py
src/types/: model.py
src/utils/: concatenate_features.py  content_wrapper.py  convert_id.py  load_data.py
tests/: conftest.py
tests/e2e_tests/: conftest.py  test_api.py
tests/features/: test_similarity.py  test_tfidf.py
tests/models/: test_collab.py  test_content.py  test_hybrid.py
tests/unit_tests/features/: test_embeddings.py  test_faiss.py
tests/unit_tests/models/: test_collab.py  test_content.py  test_hybrid.py
tests/unit_tests/utils/: test_rate_limit.py
utils/: content_wrapper.py  convert_id.py  load_data.py
