[project]
name = "media_rs"
version = "0.1.0"
description = "Application to recommend different media"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pytest >=9.0.2,<10.0.0",
    "scikit-learn >=1.8.0,<2.0.0",
    "pandas >=2.3.3,<3.0.0",
    "requests >=2.32.5,<3.0.0",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "faiss-cpu (>=1.13.2,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "media_rs"