[project]
name = "media_rs"
version = "0.1.0"
description = "Application to recommend different media"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pytest >=9.0.2,<10.0.0",
    "scikit-learn >=1.8.0,<2.0.0",
    "pandas >=2.3.3,<3.0.0",
    "requests >=2.32.5,<3.0.0",
    "django (>=6.0,<7.0)",   
    "djangorestframework >=3.14,<4.0",   
    "supabase (>=2.27.0,<3.0.0)",   
    "scipy (>=1.16.3,<2.0.0)",   
    "numpy (>=2.4.0,<3.0.0)",   
    "dotenv (>=0.9.9,<0.10.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "media_rs"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.group.training.dependencies]
sentence-transformers = ">=5.2.0,<6.0.0"
faiss-cpu = ">=1.13.2,<2.0.0"
torch = { version = ">=2.2,<3.0", source = "pytorch-cpu" }

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.19"
pytest-django = "^4.5.2"

